--- a/TournamentEditor/app/views/layouts/application.html.erb
+++ b/TournamentEditor/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
     </div>
     
     <!-- Load brackets-viewer.js and bracket_manager.js at end of body -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brackets-viewer@latest/dist/brackets-viewer.min.js"></script>
+    <script type="text/javascript" src="/javascripts/brackets_viewer.js"></script>
     <script type="text/javascript" src="/javascripts/bracket_manager.js"></script>
   </body>
 </html>
