--- a/TournamentEditor/app/views/partials/_topbar.html.erb
+++ b/TournamentEditor/app/views/partials/_topbar.html.erb
@@ -10,12 +10,14 @@
       onclick="ExportBracket()">
         Export Bracket
       </button>
-      <%= form_with url: import_tournaments_path, local: true, multipart: true, class: "inline" do |form| %>
+      <%= form_with url: root_path, local: true, multipart: true, class: "inline" do |form| %>
         <%= form.file_field :file, class: "hidden", id: "csv-file-input", onchange: "this.form.submit()" %>
-        <button type="button" onclick="document.getElementById('csv-file-input').click()" class="px-4 py-2 bg-secondary text-secondary-foreground rounded-md hover:opacity-90 transition-opacity font-medium text-nowrap overflow-hidden text-ellipsis whitespace-nowrap">
-          Import Bracket
-        </button>
-      <% end %>
+
+      <% end %>		
+	  <button class="px-4 py-2 bg-secondary text-secondary-foreground rounded-md hover:opacity-90 transition-opacity font-medium text-nowrap overflow-hidden text-ellipsis whitespace-nowrap"
+    	onclick="ImportBracket(document.getElementById('csv-file-input'))">
+    	    Import Bracket
+    </button>
     </div>
     
     <!-- Mobile hamburger menu button -->
@@ -65,18 +67,23 @@
     onclick="ExportBracket()">
         Export Bracket
     </button>
-	<%= form_with url: import_tournaments_path, local: true, multipart: true, class: "w-full" do |form| %>
-      <%= form.file_field :file, class: "hidden", id: "csv-file-input-mobile", onchange: "this.form.submit()" %>
-      <button type="button" onclick="document.getElementById('csv-file-input-mobile').click()" class="w-full px-4 py-2 bg-secondary text-secondary-foreground rounded-md hover:opacity-90 transition-opacity font-medium text-center">
-        Import Bracket
-      </button>
-    <% end %>
+      <%= form_with  url: root_path, local: true, multipart: true, class: "inline" do |form| %>
+        <%= form.file_field :file, class: "hidden", id: "csv-file-input", onchange: "this.form.submit()" %>
+      <% end %>
+	<button class="px-4 py-2 bg-secondary text-secondary-foreground rounded-md hover:opacity-90 transition-opacity font-medium text-nowrap overflow-hidden text-ellipsis whitespace-nowrap"
+    	onclick="ImportBracket(document.getElementById('csv-file-input'))">
+    	    Import Bracket
+    </button>
   </div>
 </div>
 
 <script>
   function ExportBracket() {
         window.SaveToCSV();
+  }
+
+  function ImportBracket() {
+        window.LoadFromCSV();
   }
 
   function toggleMobileMenu() {
